--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="gameLogic.js"></script>
+    <p style="transform: translateX(340px)">Up Down Left Right</p>
   </body>
 </html>
