--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="gameLogic.js"></script>
-    <p style="transform: translateX(340px)">Up Down Left Right</p>
+    <p style="transform: translateX(340px)">
+      Up Down Left Right or Touch Screen on mobile
+    </p>
   </body>
 </html>
