--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="gameLogic.js"></script>
     <p style="transform: translateX(340px)">
-      Up Down Left Right or Touch Screen on mobile
+      Up Down Left Right or Touch Screen on mobile!
     </p>
   </body>
 </html>
