--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     </style>
   </head>
   <body>
+    <p style="transform: translateX(220px)">
+      Up Down Left Right or Touch Screen on Mobile!
+    </p>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="gameLogic.js"></script>
-    <p style="transform: translateX(340px)">
-      Up Down Left Right or Touch Screen on mobile!
-    </p>
   </body>
 </html>
