--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Game</title>
-    <!-- <script src="gameLogic.js"></script> -->
     <style>
+      * {
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        max-width: 100vw;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        background-color: black;
+      }
+
       canvas {
-        border: 1px solid black;
+        max-width: 100%;
+        border: 5px solid green;
       }
     </style>
   </head>
