change text color

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
         max-width: 100%;
         border: 5px solid green;
       }
+      p {
+        color: white;
+        transform: translateX(220px);
+      }
     </style>
   </head>
   <body>
-    <p style="transform: translateX(220px)">
-      Up Down Left Right or Touch Screen on Mobile!
-    </p>
+    <p>Up Down Left Right or Touch Screen on Mobile!</p>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="gameLogic.js"></script>
   </body>
